@@ -1,5 +1,6 @@
 Changes for 1.4.3:
 
+ - [ZBX-134] fixes for hostid/groupid validation on Node switch (Artem)
  - [ZBX-131] fixed viewing password on install in plain text (Artem)
  - [ZBX-81] fix for item delay calculation problem in graphs (Artem)
  - [ZBX-107] do not display log related items in the queue (Alexei)
